[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloagentai"
version = "0.1.0"
description = "HelloAgent Python SDK — relay client + channel-link helpers. Install as `helloagentai`, import as `helloagent`."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "HelloAgent"}]
keywords = ["helloagent", "agent", "websocket", "relay", "messaging", "sdk", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=11.0",
    "protobuf>=4.21,<7",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/helloagentai/helloagent-sdk-python"
Documentation = "https://github.com/helloagentai/helloagent-sdk-python#readme"
Repository = "https://github.com/helloagentai/helloagent-sdk-python.git"
Issues = "https://github.com/helloagentai/helloagent-sdk-python/issues"

[tool.setuptools.packages.find]
include = ["helloagent*"]

[tool.setuptools.package-data]
helloagent = ["v1/*.py"]
