[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloagentai"
version = "0.1.1"
description = "HelloAgent Python SDK — relay client + channel-link helpers. Install as `helloagentai`, import as `helloagent`."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "HelloAgent"}]
keywords = ["helloagent", "agent", "websocket", "relay", "messaging", "sdk", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=11.0",
    "protobuf>=4.21,<7",
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/helloagentai/helloagent-sdk-python"
Documentation = "https://github.com/helloagentai/helloagent-sdk-python#readme"
Repository = "https://github.com/helloagentai/helloagent-sdk-python.git"
Issues = "https://github.com/helloagentai/helloagent-sdk-python/issues"

[tool.setuptools.packages.find]
include = ["helloagent*"]

[tool.setuptools.package-data]
helloagent = ["v1/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
